# SMM

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  README.zh-CN.md  api-migration.md  build.ts  bunfig.toml  cicd.ts  deprecate-sw.md  design.md  dev.ts  download-video-design.md  migration.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirement.md  run.ts
.changeset/: config.json  fix-ai-tools-filesystem-validation.md  hide-music-summarize-ohos.md  plan-cleanup-shared.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.opencode/: README.md
apps/ohos/hello_rust/: Cargo.toml  README.md  aarch64-ohos-clang.cmd  aarch64-ohos-clang.sh  x86_64-ohos-clang.cmd  x86_64-ohos-clang.sh
apps/ohos/hello_rust/.cargo/: config.toml
apps/ohos/hello_rust/src/: lib.rs
ci/: build-e2e-config.test.ts  build-e2e-config.ts  build-ohos.sh  collect-wdio-report.test.ts  collect-wdio-report.ts  download-3pp-binary.sh  ensure-wdio-cache.test.ts  ensure-wdio-cache.ts  run-e2e-child.test.ts  run-e2e-child.ts  run-e2e-test.ts  wait-for-e2e-ready.ts
cli/: bunfig.toml  index.ts  package.json  server.ts  tsconfig.json
core/: README.md  errors.ts  event-types.ts  mediaMetadata.test.ts  package.json  path.test.ts  path.ts  types.ts
docs/: AI-driven-recognition.md  ClientServerCommunication.md  DebugAPI.md  MediaFolderAutoRecognize.md  ModuleMockingInBunTest.md  RenameFiles.md  YtdlpAPI.md  docker-install.md  episode-example.nfo  features.md  import-media-library.md  trace-id.md  (+4 more)
(+2387 files in other folders)
